# PlantsCare_Server

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.json  log.json
src/: config.rs  main.rs
src/commands/: command.rs
src/requests/: conditioners_request.rs  echo_request.rs  get_camera_image_request.rs  get_climate_request.rs  is_enabled_request.rs  is_enough_water_request.rs  mod.rs  set_climate_request.rs  set_switch_request.rs  turn_servo_request.rs  water_request.rs
src/server/: error_output.rs  headers.rs  json_request_handler.rs  mod.rs  protected_json_request_handler.rs  request_handler.rs  server_error.rs
src/services/: climate.rs  computers.rs  mod.rs  switches.rs
src/utils/: camera.rs  mod.rs  rppal_error.rs  servo.rs  water_pump.rs  water_sensor.rs
