[package]
name = "rpi_home"
version = "0.1.0"
authors = ["Nirklav <mrAnton911@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
byteorder = "1.4"
thiserror = "1.0"
async-trait = "0.1"

serde_repr = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"

log = "0.4"
log4rs = { version = "1.2", features = ["all_components", "json_format"] }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.14"
rascam = "0.0.2"